package grpc

import (
	"context"
	"fmt"
	"os"
	"time"

	"github.com/sirupsen/logrus"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

// AIEngineClient wraps the gRPC client for the AI Engine service
type AIEngineClient struct {
	conn *grpc.ClientConn
	// client ai_engine.AIEngineServiceClient // Will be added when we generate proto files
}

func NewAIEngineClient() (*AIEngineClient, error) {
	// Get AI Engine service address
	address := os.Getenv("AI_ENGINE_ADDRESS")
	if address == "" {
		address = "localhost:50051"
	}

	logrus.Infof("Connecting to AI Engine service at %s", address)

	// Set up connection options
	opts := []grpc.DialOption{
		grpc.WithTransportCredentials(insecure.NewCredentials()),
		grpc.WithBlock(),
		grpc.WithTimeout(10 * time.Second),
	}

	// Establish connection
	conn, err := grpc.Dial(address, opts...)
	if err != nil {
		return nil, fmt.Errorf("failed to connect to AI Engine service: %w", err)
	}

	// Create client
	// client := ai_engine.NewAIEngineServiceClient(conn) // Will be uncommented when proto is generated

	logrus.Info("Successfully connected to AI Engine service")

	return &AIEngineClient{
		conn: conn,
		// client: client,
	}, nil
}

func (c *AIEngineClient) Close() error {
	if c.conn != nil {
		return c.conn.Close()
	}
	return nil
}

// Placeholder methods - will be implemented once proto files are generated
func (c *AIEngineClient) GenerateCreative(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement once proto files are generated
	logrus.Info("GenerateCreative called - placeholder implementation")
	return map[string]interface{}{
		"success": true,
		"message": "Creative generation placeholder",
		"variations": []map[string]interface{}{
			{
				"variation_id": "var_001",
				"content_url":  "https://placeholder.com/creative",
				"content_type": "image",
			},
		},
	}, nil
}

func (c *AIEngineClient) AnalyzeCampaign(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement once proto files are generated
	logrus.Info("AnalyzeCampaign called - placeholder implementation")
	return map[string]interface{}{
		"success": true,
		"message": "Campaign analysis placeholder",
		"analysis": map[string]interface{}{
			"summary":  "Campaign is performing well",
			"metrics":  map[string]float64{"ctr": 2.5, "roas": 3.2},
			"insights": []string{"Consider increasing budget", "Target audience is highly engaged"},
		},
	}, nil
}

func (c *AIEngineClient) ExecuteAgentWorkflow(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement once proto files are generated
	logrus.Info("ExecuteAgentWorkflow called - placeholder implementation")
	return map[string]interface{}{
		"success": true,
		"message": "Agent workflow executed",
		"result":  "Workflow completed successfully with placeholder data",
		"tools_used": []map[string]interface{}{
			{
				"tool_name": "web_search",
				"input":     "market trends",
				"output":    "Found relevant market data",
			},
		},
	}, nil
}

func (c *AIEngineClient) GenerateInsights(ctx context.Context, req interface{}) (interface{}, error) {
	// TODO: Implement once proto files are generated
	logrus.Info("GenerateInsights called - placeholder implementation")
	return map[string]interface{}{
		"success": true,
		"message": "Insights generated",
		"insights": []map[string]interface{}{
			{
				"title":       "Performance Optimization",
				"description": "Campaign can be optimized by adjusting targeting",
				"category":    "optimization",
				"confidence":  0.85,
			},
		},
	}, nil
}
